--- a/src/views/message.ejs
+++ b/src/views/message.ejs
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/css/register.css" rel="stylesheet" />
     <title><%= title %></title>
   </head>
   <body>
-    <h1><%= message %></h1>
+    <div id="root">
+      <h1><%= message %></h1>
+    </div>
   </body>
 </html>
